# alx-low_level_programming

0x00-hello_world/: 101-quote.c  4-puts.c  5-printf.c  6-size.c
0x01-variables_if_else_while/: 0-positive_or_negative.c  1-last_digit.c  100-print_comb3.c  101-print_comb4.c  102-print_comb5.c  2-print_alphabet.c  3-print_alphabets.c  4-print_alphabt.c  5-print_numbers.c  6-print_numberz.c  7-print_tebahpla.c  8-print_base16.c  9-print_comb.c
0x02-functions_nested_loops/: 0-putchar.c  1-alphabet.c  10-add.c  100-times_table.c  11-print_to_98.c  2-print_alphabet_x10.c  3-islower.c  4-isalpha.c  5-sign.c  6-abs.c  7-print_last_digit.c  8-24_hours.c  9-times_table.c  README.md  main.h
0x03-debugging/: 1-main.c
0x04-more_functions_nested_loops/: .6-print_line.c.swp  0-isuper  0-isupper.c  1-isdigit.c  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c
0x05-pointers_arrays_strings/: 0-reset_to_98.c  1-swap.c  100-atoi.c  2-strlen.c  3-puts.c  4-print_rev.c  5-rev_string.c  6-puts2.c  7-puts_half.c  8-print_array.c  9-strcpy.c
0x06-pointers_arrays_strings/: .2-strncpy.c.swp  0-strcat.c  1-strncat.c  2-strncpy.c  3-strcmp.c
0x07-pointers_arrays_strings/: 0-memset.c  1-memcpy.c  100-set_string.c  2-strchr.c  3-strspn  3-strspn.c  4-strpbrk.c  5-strstr.c  7-print_chessboard.c  8-print_diagsums.c  main.h
0x17-doubly_linked_lists/: 0-print_dlistint.c  1-dlistint_len.c  2-add_dnodeint.c  3-add_dnodeint_end.c  4-free_dlistint.c  5-get_dnodeint.c  6-sum_dlistint.c  7-insert_dnodeint.c  8-delete_dnodeint.c  CMakeLists.txt  lists.h  main.c
(+120 files in other folders)
